[package]
name = "init"
version = "0.1.0"
edition = "2021"
authors = ["Sushant Bajracharya <sussyoung9@gmail.com>"]

[dependencies]
env_logger = "0.11.6"
log = "0.4.22"
nix =  { version = "0.29.0", features = ["fs", "mount"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", default-features = false, features = ["full"] }

[profile.release]
lto = true

