[package]
name = "init"
version = "0.1.0"
edition = "2021"
authors = ["Sushant Bajracharya <sussyoung9@gmail.com>"]

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
nix = { version = "0.29.0", features = ["mount", "signal", "fs", "hostname"] }
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt","rt-multi-thread", "sync", "time", "process", "signal"] }
tokio-vsock = "0.7.0"
warp = "0.3.7"
rtnetlink = "0.14.1"
futures = "0.3.31"
base64 = "0.22.1"
rlimit = "0.10.2"
anyhow = "1.0.33"
procfs = "0.7.7"

[profile.release]
lto = true
